syntax = "proto3";

option go_package = "api/protobuf/step_pb";

package GGargantua.v1.request;

enum StepType{
  UNKNOWN = 0;
  REQUEST = 1;
  SCRIPT = 2;
  FOR = 3;
  IF = 4;
}

message Step {
  StepType TypeOfStep = 1;
  string Content = 2;
}

message MultiSteps{
  repeated Step Steps = 1;
}

message StepResult {
  bytes Result = 1;
  repeated StepResult SubResult = 2;
}

message MultiResults{
  repeated StepResult Results = 1;
}

service MultipleStepService {
  rpc ExecuteMultipleStep(MultiSteps) returns (MultiResults);
}